Day 16 minor fixes (uses Grid<> instead of GridOfCharacters)